<resources>
    <string name="app_name_leavemanager">Leave Manager</string>
    <string-array name="rejectreason">
        <item />
        <item>Insufficient Leave Balance</item>
        <item>Leave Conflict</item>
        <item>Incompatible Leave Certificate</item>
    </string-array>
    <string-array name="transport_types">
        <item>@string/bus_plain</item>
        <item>@string/mtr_plain</item>
        <item>@string/minibus_plain</item>
    </string-array>
    <string name="msg_infoCopyright">
        Copyright © 2018 Data World Solutions Ltd. All rights reserved.
        \n\nTerms and Conditions
        \n\nYou are deemed to have accepted the Terms and Conditions provided herein when you use the Mobile App - DW-iHR Leave Manager.
        \n\n1. The information (the “Information”) of the Mobile App – DW-iHR Leave Manager (the “Application”) provided by Data World Solutions Limited (the “Companies”) including but not limited to the user information and other information through the internet, is of general information nature only. Whilst the Companies endeavour to ensure the accuracy of the Information, no statement, representation, warranty or guarantee, expressed or implied, is given as to the accuracy or appropriateness for use in any circumstances. The Companies accept no liability for any loss or damage whatsoever and howsoever arising from the Information and the Application.
        \n\n2. The Information may be contributed by others over whom the Companies have no influence. The Companies accept no responsibility in ensuring the correctness and validity of the Information, and accept no liability for any loss or damage whatsoever and howsoever arising from the Information contributed by others.
        \n\n3. Data charges apply when using this Service. Roaming charges apply when using this Service overseas.
        \n\n4. The Companies reserve the right to omit, suspend or edit the Information at any time in its absolute discretion without giving any reason or prior notice.
        \n\n5. You expressly agree that the use of the Application is at your sole risk. The Application is provided on an “as is” and “as available” basis.
        \n\n6. The Information and the Application are the Companies’ property. They are protected by copyright, trademarks or other intellectual property rights. The Companies expressly retain all the relevant rights and laws for enforcement. No modification, copying, publication, transfer, sale, or any commercial exploitation of any kind in whole or in part is permitted.
        \n\n7. The Companies reserve their right to disallow you to link to this Application at any time. If the Companies assert such right, you shall remove forthwith such links to this Application.
        \n\n8. You must not misuse or disrupt this Application by knowingly or negligently generating unnecessary traffic, introducing viruses, trojans, worms, logic bombs or other materials which may be malicious or technologically harmful to this Application.
        \n\n9. You must not use the services of this Application for any purpose which may violate the law. You shall strictly comply with all laws and regulations in Hong Kong or elsewhere regarding online conduct and acceptable content.
        \n\n10. You must not gain, or attempt to gain, unauthorized access to this Application or any of its related servers, computers or databases.
        \n\n11. The Companies do not guarantee uninterrupted, continued or secured access in the Application. The Application may be unavailable at any time for any reason including system malfunction, disruption, internet access downtime or other technical problems. You agree that the use of the Application is at your own risk and that the Companies shall not be responsible and liable for any damage or loss incurred thereby.
        \n\n12. You represent and warrant that you shall not engage in the following activities when using this Application:
        \n(a)use the services of this Application for the purpose of spamming any other user; or
        \n(b)use the services of this Application for any purpose other than checking the information provided therein.
        \n\n13. If anyone brings a claim against the Companies which is attributable to your acts done in or through this Application, you shall indemnify the Companies and keep the Companies fully and effectively indemnified from and against all damages, losses, and expenses of any kind (including all legal fees and costs) related to such claim.
        \n\n14. The Companies makes no warranty as to the reliability, accuracy, timeliness, usefulness or completeness of the information on this Application. Your access or use of this Application does not create in any way any relationship that would give rise to any duty on the part of the Companies apart from those provided for in these Terms.
        \n\n15. The Companies may amend and update these Terms from time to time. You are reminded to regularly review these Terms through this Application to keep yourself updated on the latest version of these Terms. The Companies may, but shall in no event be obliged to, notify you of any update to the terms of these Terms by means of posts in this Application. By continuing to access or use this Application after those amendments and updates become effective, you agree to be bound by these Terms as amended, which shall supersede all previous terms and conditions the Companies has with you.
        \n\n16. This Disclaimer shall be governed by and construed in accordance with the Laws of Hong Kong Special Administrative Region. You submit to the non-exclusive jurisdiction of the courts of Hong Kong Special Administrative Region.
        \n\n17. This Disclaimer is also translated into Chinese language. If there is any inconsistency between the English version and the Chinese version, the English version shall prevail.
        \n
    </string>
    <string name="daycount">%1$d Days</string>
    <string name="btn_chatroom">TEAM CHAT</string>
    <string name="leave_entry_date">Date</string>
    <string name="leave_entry_type">Type</string>
    <string name="leave_entry_section">Section</string>
    <string name="leave_calendar_team">Team</string>
    <string name="leave_calendar_myself">Myself</string>
    <string name="leave_calendar_leave">Leave</string>
    <string name="leave_calendar_shift">Shift</string>
    <string name="title_activity_settings">Settings</string>
    <string name="pref_header_general">General</string>
    <string name="pref_title_server_addr">Server Location</string>
    <string name="pref_title_Language">Language</string>
    <string name="pref_language_english">English</string>
    <string name="pref_language_chinese">中文</string>
    <string name="action_settings">Settings</string>
    <string name="action_logout">Logout</string>
    <string name="action_about">Terms and Conditions</string>
    <string name="login_msg_progress">Logging in progress…</string>
    <string name="leave_apply_msg_progress">Leave apply in progress…</string>
    <string name="leave_approval_msg_progress">Leave approval in progress…</string>
    <string name="leave_withdraw_msg_progress">Leave withdraw in progress…</string>
    <string name="leave_cancel_msg_progress">Leave cancel in progress…</string>
    <string name="request_leave_approval_list_progress">Request leave approval list in progress…</string>
    <string name="request_leave_approval_detail_progress">Request leave approval detail in progress…</string>
    <string name="request_leave_history_list_progress">Request leave history list in progress…</string>
    <string name="request_leave_history_detail_progress">Request leave history detail in progress…</string>
    <string name="logout_msg_progress">Logout in progress…</string>
    <string name="et_name">Name</string>
    <string name="et_password">Password</string>
    <string name="et_password_retype">Retype Password</string>
    <string name="btn_login">LOGIN</string>
    <string name="tv_version">Version</string>
    <string name="remember_me">Remember Me</string>
    <string name="password_change_mandatory">Your password must be changed upon the first login.</string>
    <string name="no_active_employments">This account has no active employments! Exiting.</string>
    <string name="btn_applyleave">APPLY LEAVE</string>
    <string name="btn_myapplication">MY APPLICATIONS</string>
    <string name="btn_leaveapproval">LEAVE APPROVAL</string>
    <string name="btn_cancelleaveapproval">CANCEL LEAVE APPROVAL</string>
    <string name="btn_downloadPDF">DOWNLOAD PDF</string>
    <string name="btn_downloadTaxation">DOWNLOAD TAX FORMS</string>
    <string name="btn_downloadPayslip">DOWNLOAD PAYSLIP</string>
    <string name="btn_leave_calendar">LEAVE CALENDAR</string>
    <string name="btn_fare_claims">EXPENSES CLAIMS</string>
    <string name="btn_attendance">ATTENDANCE (separate service)</string>
    <string name="btn_applyleaveCamel">Apply Leave</string>
    <string name="btn_myapplicationCamel">My Applications</string>
    <string name="btn_leaveapprovalCamel">Leave Approval</string>
    <string name="btn_cancelleaveapprovalCamel">Cancel Leave Approval</string>
    <string name="btn_downloadPDFCamel">Download PDF</string>
    <string name="btn_downloadTaxationCamel">Download Tax Forms</string>
    <string name="btn_downloadPayslipCamel">Download Payslip</string>
    <string name="btn_leave_calendarCamel">Leave Calendar</string>
    <string name="btn_fare_claimsCamel">Expenses Claims</string>
    <string name="btn_attendanceCamel">Attendance</string>
    <string name="title_activity_leave_apply">Apply Leave</string>
    <string name="dialog_title_date_selected">Apply Leave Date(s):</string>
    <string name="tv_name">Applicant: %1$s</string>
    <string name="tv_name_colon">Applicant: </string>
    <string name="tv_nickname">Nickname: %1$s</string>
    <string name="tv_remainBal">Balance: %1$s</string>
    <string name="tv_remainBal_colon">Balance: </string>
    <string name="tv_asOfDate">As of: %1$s</string>
    <string name="rb_al">AL</string>
    <string name="rb_sl">SL</string>
    <string name="rb_fullday">Day</string>
    <string name="rb_section">3Section</string>
    <string name="rb_am">AM</string>
    <string name="rb_pm">PM</string>
    <string name="et_startDate">Start Date</string>
    <string name="et_endDate">End Date</string>
    <string name="btn_apply">APPLY</string>
    <string name="et_fromDateWithoutFormat">From</string>
    <string name="et_toDateWithoutFormat">To</string>
    <string name="tv_pendingStatus">Wait for Approval</string>
    <string name="tv_pendingStatus_short">Waiting</string>
    <string name="tv_acceptStatus">Approved</string>
    <string name="tv_rejectStatus">Rejected</string>
    <string name="tv_cancelledStatus">Cancelled</string>
    <string name="tv_pendingforcancelStatus">Wait for Cancel</string>
    <string name="tv_confirmedCancelledStatus">Confirm Cancelled</string>
    <string name="tv_undefineStatus">Undefined Status</string>
    <string name="tv_tranferStatus">Transferred</string>
    <string name="tv_leavetype">Leave Type: %1$s</string>
    <string name="tv_leavetype_colon">Leave Type: </string>
    <string name="tv_from">From: </string>
    <string name="tv_to">To: </string>
    <string name="tv_date_range">From: %1$s\nTo: %2$s</string>
    <string name="tv_seqno">Sequence Number: %1$d</string>
    <string name="tv_username">Username: %1$s</string>
    <string name="tv_position">Position: %1$s</string>
    <string name="tv_datetime">Date: %1$s Time: %2$s</string>
    <string name="tv_remark">Remark: %1$s</string>
    <string name="route">Route: %1$s</string>
    <string name="fare">Fare: $%1$.1f</string>
    <string name="route_arrow">%1$s ➠ %2$s</string>
    <string name="on_off">On: %1$s\nOff: %2$s</string>
    <string name="clear_all_notifications">{md_clear-all} Clear all notifications</string>
</resources>