<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="hk.com.dataworld.dwhrms.BaseActivity">
    <item
        android:id="@+id/action_notification"
        android:orderInCategory="102"
        android:title="Notification"
        app:actionLayout="@layout/notification_button"
        app:showAsAction="always" />

    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:title="@string/action_settings"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_logout"
        android:orderInCategory="101"
        android:title="@string/action_logout"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_quit"
        android:icon="@drawable/ic_exit_to_app_white_24dp"
        android:title="Quit"
        android:visible="false"
        app:showAsAction="always" />
    <item
        android:id="@+id/action_about"
        android:orderInCategory="102"
        android:title="@string/action_about"
        app:showAsAction="never" />


</menu>
