<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <PreferenceCategory android:title="@string/pref_header_general">
        <EditTextPreference
            android:defaultValue="http://192.168.9.47:8888/DW-iHR/"
            android:inputType="textUri"
            android:key="pref_server_addr"
            android:maxLines="1"
            android:selectAllOnFocus="true"
            android:singleLine="true"
            android:title="@string/pref_title_server_addr" />
        <hk.com.dataworld.leaveapp.LocaleListPreference
            android:defaultValue="-1"
            android:key="pref_locale"
            android:negativeButtonText="@null"
            android:positiveButtonText="@null"
            android:title="@string/pref_title_Language" />
        <!--<EditTextPreference-->
            <!--android:inputType="text"-->
            <!--android:key="pref_device_name"-->
            <!--android:maxLength="100"-->
            <!--android:maxLines="1"-->
            <!--android:selectAllOnFocus="true"-->
            <!--android:singleLine="true"-->
            <!--android:title="@string/pref_title_device_name" />-->
    </PreferenceCategory>
</PreferenceScreen>
