<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/histlistLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBackground">

    <TextView
        android:id="@+id/tvId"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:text="ID"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:textColor="@color/colorDisplayText" />

    <TextView
        android:id="@+id/tvSeqNo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tvId"
        android:layout_alignParentLeft="true"
        android:paddingStart="4dp"
        android:text="@string/tv_seqno"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:textColor="@color/colorDisplayText" />

    <TextView
        android:id="@+id/tvUserName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tvSeqNo"
        android:layout_alignParentLeft="true"
        android:paddingStart="4dp"
        android:text="@string/tv_username"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:textColor="@color/colorDisplayText" />

    <TextView
        android:id="@+id/tvPosition"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tvUserName"
        android:layout_alignParentLeft="true"
        android:paddingStart="4dp"
        android:text="@string/tv_position"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:textColor="@color/colorDisplayText" />

    <TextView
        android:id="@+id/contentStartDate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tvPosition"
        android:layout_alignParentLeft="true"
        android:paddingStart="4dp"
        android:text="@string/tv_datetime"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:textColor="@color/colorDisplayText" />

    <TextView
        android:id="@+id/tvRemark"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/contentStartDate"
        android:layout_alignParentLeft="true"
        android:paddingStart="4dp"
        android:text="@string/tv_remark"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:textColor="@color/colorDisplayText" />


    <!--<Space-->
        <!--android:id="@+id/sp2"-->
        <!--android:layout_width="5dp"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:layout_below="@+id/tvSeqNo"-->
        <!--android:layout_toEndOf="@+id/contentStartDate" />-->

    <!--<Space-->
        <!--android:id="@+id/sp3"-->
        <!--android:layout_width="5dp"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:layout_below="@+id/contentStartDate"-->
        <!--android:layout_toEndOf="@+id/tvRemark" />-->

</RelativeLayout>