<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/outer"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal">

    <TextView
        android:id="@+id/position_num"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:text="1"
        android:textSize="@dimen/bootstrap_h1_text_size" />

    <ImageView
        android:id="@+id/transport_icon"
        android:layout_width="64dp"
        android:layout_height="64dp"
        android:layout_centerVertical="true"
        android:layout_toEndOf="@id/position_num"
        android:paddingStart="20dp"
        android:paddingEnd="20dp"
        android:scaleType="fitCenter"
        android:src="@mipmap/ic_launcher" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_toStartOf="@id/btn_trash"
        android:layout_toEndOf="@id/transport_icon"
        android:orientation="vertical">

        <TextView
            android:id="@+id/route"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/route"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/arrow"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/route_arrow" />

        <TextView
            android:id="@+id/on_off"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/on_off" />

        <TextView
            android:id="@+id/fare"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/fare"
            android:textStyle="bold|italic" />
    </LinearLayout>


    <com.beardedhen.androidbootstrap.BootstrapButton
        android:id="@+id/btn_trash"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_centerVertical="true"
        android:minWidth="20dp"
        android:visibility="gone"
        app:bootstrapBrand="danger"
        app:bootstrapSize="sm"
        app:fontAwesomeIcon="fa_trash"
        app:roundedCorners="true" />
</RelativeLayout>