<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/drawerLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBackground"
    tools:context="hk.com.dataworld.leaveapp.SelectionActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorBackground"
            android:orientation="vertical">

            <Button
                android:id="@+id/btnApplyleave"
                android:layout_width="match_parent"
                android:layout_height="@dimen/place_autocomplete_separator_start"
                android:layout_marginStart="4dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="4dp"
                android:background="@drawable/content_page_color_botton_a"
                android:text="@string/btn_applyleave"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:textColor="@color/colorButtonText"
                app:layout_constraintBottom_toTopOf="@+id/btnLeaveApproval"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.583"
                app:layout_constraintStart_toEndOf="@+id/btnNewworker" />

            <Button
                android:id="@+id/btnLeaveApproval"
                android:layout_width="match_parent"
                android:layout_height="@dimen/place_autocomplete_separator_start"
                android:layout_marginStart="4dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="4dp"
                android:background="@drawable/content_page_color_botton_b"
                android:text="@string/btn_leaveapproval"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:textColor="@color/colorButtonText"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.583" />

            <Button
                android:id="@+id/btnMyApplication"
                android:layout_width="match_parent"
                android:layout_height="@dimen/place_autocomplete_separator_start"
                android:layout_marginStart="4dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="4dp"
                android:background="@drawable/content_page_color_botton_c"
                android:text="@string/btn_myapplication"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:textColor="@color/colorButtonText"
                app:layout_constraintBottom_toTopOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.583"
                app:layout_constraintStart_toEndOf="parent" />

            <Button
                android:id="@+id/btnFareClaims"
                android:layout_width="match_parent"
                android:layout_height="@dimen/place_autocomplete_separator_start"
                android:layout_marginStart="4dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="4dp"
                android:background="@drawable/content_page_color_botton_d"
                android:text="@string/btn_fare_claims"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:textColor="@color/colorButtonText" />

            <Button
                android:id="@+id/btnBluetoothAttendance"
                android:visibility="gone"
                android:layout_width="match_parent"
                android:layout_height="@dimen/place_autocomplete_separator_start"
                android:layout_marginStart="4dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="4dp"
                android:background="@drawable/content_page_color_botton_d"
                android:text="@string/btn_attendance"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:textColor="@color/colorButtonText" />

            <Button
                android:id="@+id/btnLeaveCalendar"
                android:layout_width="match_parent"
                android:layout_height="@dimen/place_autocomplete_separator_start"
                android:layout_marginStart="4dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="4dp"
                android:background="@drawable/content_page_color_botton_e"
                android:text="@string/btn_leave_calendar"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:textColor="@color/colorButtonText" />

            <Button
                android:id="@+id/btnPaySlip"
                android:layout_width="match_parent"
                android:layout_height="@dimen/place_autocomplete_separator_start"
                android:layout_marginStart="4dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="4dp"
                android:background="@drawable/content_page_color_botton_f"
                android:text="@string/btn_downloadPayslip"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:textColor="@color/colorButtonText" />

            <Button
                android:id="@+id/btnTaxation"
                android:layout_width="match_parent"
                android:layout_height="@dimen/place_autocomplete_separator_start"
                android:layout_marginStart="4dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="4dp"
                android:background="@drawable/content_page_color_botton_g"
                android:text="@string/btn_downloadTaxation"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:textColor="@color/colorButtonText" />

<!--            <Button-->
<!--                android:id="@+id/btnFareClaims"-->
<!--                android:layout_width="match_parent"-->
<!--                android:layout_height="@dimen/place_autocomplete_separator_start"-->
<!--                android:layout_marginStart="4dp"-->
<!--                android:layout_marginTop="16dp"-->
<!--                android:layout_marginEnd="4dp"-->
<!--                android:background="@drawable/content_page_color_botton_a"-->
<!--                android:text="@string/btn_fare_claims"-->
<!--                android:textAppearance="?android:attr/textAppearanceLarge"-->
<!--                android:textColor="@color/colorButtonText" />-->

        </LinearLayout>
    </ScrollView>

        <com.google.android.material.navigation.NavigationView
    android:background="@color/platinum"
        android:id="@+id/drawer_navigation"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="end"
        android:fitsSystemWindows="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <com.beardedhen.androidbootstrap.BootstrapButton
                android:id="@+id/btn_removeAllNotifications"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="4dp"
                app:bootstrapBrand="danger"
                app:bootstrapText="@string/clear_all_notifications"
                app:roundedCorners="true" />

            <ListView
                android:id="@+id/drawer_list"
                android:layout_width="match_parent"
                android:layout_height="match_parent" />
        </LinearLayout>
    </com.google.android.material.navigation.NavigationView>

</androidx.drawerlayout.widget.DrawerLayout>
